Some CSS corrections (overflow set to hidden during intro and change search input animation)

--- a/src/sass/_animations.scss
+++ b/src/sass/_animations.scss
@@ -37,7 +37,7 @@
     margin-top: -10vh;
   }
   80% {
-    margin-top: 13vh;
+    margin-top: 14vh;
   }
   to {
     margin-top: 12vh;
